--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.deltadax.views_example">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".ViewsApps"
         android:allowBackup="true"
@@ -10,17 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
-        </activity>
+        <activity android:name=".activity.MainActivity"></activity>
         <activity
-            android:label="@string/other_activty_tag"
-            android:name=".activity.RecycleListActivity">
+            android:name=".activity.RecycleListActivity"
+            android:label="@string/other_activty_tag">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.DetalleActivity"></activity>
     </application>
 
 </manifest>
